--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="child" id="today"> <h1 id="cityName"></h1> 
       <p id="date1"></p>
       <ul>
+        <li id="desc1"></li>
         <li id="icon1"><img id="img" src="" alt=""></li>
         <li id="temp1"></li>
         <li id="wind1"></li>
@@ -26,6 +27,7 @@
   <div class="cards">
    <div class="card"> <p id="date2"></p> 
     <ul>
+      <li id="desc2"></li>
       <li id="icon2"><img id="img2" src="" alt=""></li>
       <li id="temp2"></li>
       <li id="wind2"></li>
@@ -33,6 +35,7 @@
     </ul></div>
     <div class="card"> <p id="date3"></p>
       <ul>
+        <li id="desc3"></li>
         <li id="icon3"><img id="img3" src="" alt=""></li>
         <li id="temp3"></li>
         <li id="wind3"></li>
@@ -40,6 +43,7 @@
       </ul></div>
       <div class="card"> <p id="date4"></p>
         <ul>
+          <li id="desc4"></li>
           <li id="icon4"><img id="img4" src="" alt=""></li>
           <li id="temp4"></li>
           <li id="wind4"></li>
@@ -47,6 +51,7 @@
         </ul></div>
         <div class="card"> <p id="date5"></p>
           <ul>
+            <li id="desc5"></li>
             <li id="icon5"><img id="img5" src="" alt=""></li>
             <li id="temp5"></li>
             <li id="wind5"></li>
